Revision history for Perl extension Math::Polynomial::Solve.

2.67
     Apr 19 2013
	- Add --ascending flag to the perl scripts in the eg/ directory.
	  Use test individual functions
	- Added files hqr.pl, laguerre.pl, and nr.pl to the eg/
	  directory, and added them to the MANIFEST. Again, new scripts
	  for trying individual functions.
     Apr 17 2013
	- Fix $ascending_flag checks in sturm functions with early
	  returns, or the sturm functions that use the first entry
	  in the chain for the (unreversed) polynomial.
	- Removed zyxw.t, as the existing test files now check
	  ascending_order() themselves.
     Apr 15 2013
	- Test files sturm1.t, sturm2.t, and sturm3.t also use
	  Test::More and test with the ascending_order().
	- Add ascending_order() tests to pderival.t.
	- Add ascending_order() tests to peval.t.
     Apr 12 2013
	- Get sturm0.t testing with ascending_order(), and Test::More.
     Apr 11 2013
	- Testing via division.t tests correctly again, with or without
	  the ascending_order() set.
	- Start in on the :sturm functions to recognize $ascending_flag.
     Apr 4 2013
	- Completed (maybe) adding $ascending_flag to the :utility
	  functions.
     Apr 1 2013
	- Start in on using $ascending_flags for the :utility functions.
	- Note ascending_order()'s use at length in the README file.
     Mar 28 2013
	- Fixed use of $ascending_flag in the :classical and :numeric
	  functions. Left to do are :sturm and :utility functions.
	- Updated test files for quadratic, cubic, quartic, and the
	  generic poly_roots() functions. They now use Test::More
	  and a new allzeroes() function for testing.
	- New test file zyxw.t for the ascending_order() checks.
     Mar 25 2013
	- Added the ascending_order() function, the $asending_flag
	  variable, and the documentation for the function. Actual
	  code comes later.
2.66
     Jan 25 2013
	- Wrote a better paragraph describing balance_matrix().
     Jan 15 2013