@@ -1,11 +1,11 @@
-	Math::Polynomial::Solve, version 2.67, 16 April 2013.
+	Math::Polynomial::Solve, version 2.67, 3 May 2013.
 ------------------------------------------------------------------------
 >>>                                                                     <<<
 >>>NOTE: FUNCTIONS set_hessenberg() AND get_hessenberg() ARE DEPRECATED.<<<
 >>>                ----------------     ----------------                <<<
 >>>  YOU WILL GET MESSAGES TO THAT EFFECT IN CODE. THE FUNCTIONS WILL   <<<
 >>>  BE REMOVED WITH THE FORTHCOMING VERSION 2.70 (to be released in    <<<
->>>  early January 2014).                                               <<<
+>>>  early March 2014).                                                 <<<
 >>>                                                                     <<<
 >>>The function poly_option() replaces them. See the documentation for  <<<
 >>>more details.                                                        <<<
